Debut de l'implementation de la nomination

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=
 #spring.datasource.password=UDTqcs789@@@
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl= false
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=update
