--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.main.allow-bean-definition-overriding=true
 server.port=8081
 #spring.datasource.url=jdbc:mysql://mysql-lenicode.alwaysdata.net/lenicode_test1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://db4free.net/staffadmin?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/staffadmin?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/staffamin_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/staffadmin?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 #spring.datasource.username=lenicode
 spring.datasource.password=
